--- a/config/database.yml
+++ b/config/database.yml
@@ -5,34 +5,21 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: postgresql
-  encoding: unicode
-  # For details on connection pooling, see Rails configuration guide
-  # http://guides.rubyonrails.org/configuring.html#database-pooling
+  adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  timeout: 5000
 
 development:
-  adapter: postgresql
-  encoding: unicode
-  database: rails_api
-  host: localhost
-  pool: 5
-  username: pgsql
-  password: pgsql
+  <<: *default
+  database: db/development.sqlite3
 
-
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
-  encoding: unicode
-  database: rails_api_test
-  host: localhost
-  pool: 5
-  username: pgsql
-  password: pgsql
-
+  <<: *default
+  database: db/test.sqlite3
 
 production:
   <<: *default
-  database: rails_api_production
-  username: rails_api
-  password: <%= ENV['RAILS_API_DATABASE_PASSWORD'] %>
+  database: db/production.sqlite3
