Milestone 3 done with OKTA

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ app/assets/images/.DS_Store
 .byebug_history
 config/application.yml
 
+
+# Ignore application configuration
+/config/application.yml
